--- a/GMI-angular/src/app/dashboard/matriels-manquant/matriels-manquant.component.html
+++ b/GMI-angular/src/app/dashboard/matriels-manquant/matriels-manquant.component.html
@@ -99,12 +99,21 @@
         </div>
         <form (ngSubmit)="addMaterielman()" class="space-y-4">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                <input type="text" [(ngModel)]="newMaterielmanq.nom" name="nom" placeholder="Nom" required
-                    class="form-input border rounded-md p-2 w-full dark:bg-[#0c1427] dark:text-white dark:border-[#172036]" />
-                <input type="text" [(ngModel)]="newMaterielmanq.modele" name="modele" placeholder="Modèle" required
-                    class="form-input border rounded-md p-2 w-full dark:bg-[#0c1427] dark:text-white dark:border-[#172036]" />
-                <input type="number" [(ngModel)]="newMaterielmanq.stock" name="stock" placeholder="Stock" required
-                    class="form-input border rounded-md p-2 w-full dark:bg-[#0c1427] dark:text-white dark:border-[#172036]" />
+                <div>
+                    <label for="nom" class="block mb-1 font-medium">Nom</label>
+                    <input type="text" [(ngModel)]="newMaterielmanq.nom" name="nom" id="nom" placeholder="Nom" required
+                        class="form-input border rounded-md p-2 w-full dark:bg-[#0c1427] dark:text-white dark:border-[#172036]" />
+                </div>
+                <div>
+                    <label for="modele" class="block mb-1 font-medium">Modèle</label>
+                    <input type="text" [(ngModel)]="newMaterielmanq.modele" name="modele" id="modele" placeholder="Modèle" required
+                        class="form-input border rounded-md p-2 w-full dark:bg-[#0c1427] dark:text-white dark:border-[#172036]" />
+                </div>
+                <div>
+                    <label for="stock" class="block mb-1 font-medium">Stock</label>
+                    <input type="number" [(ngModel)]="newMaterielmanq.stock" name="stock" id="stock" placeholder="Stock" required
+                        class="form-input border rounded-md p-2 w-full dark:bg-[#0c1427] dark:text-white dark:border-[#172036]" />
+                </div>
             </div>
 
             <div class="flex justify-end space-x-2 pt-4">
@@ -130,12 +139,21 @@
         </div>
         <form (ngSubmit)="updateMateriel()" class="space-y-4">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                <input type="text" [(ngModel)]="selectedMateriel.nom" name="nom" placeholder="Nom" required
-                    class="form-input border rounded-md p-2 w-full dark:bg-[#0c1427] dark:text-white dark:border-[#172036]" />
-                <input type="text" [(ngModel)]="selectedMateriel.modele" name="model" placeholder="Modèle" required
-                    class="form-input border rounded-md p-2 w-full dark:bg-[#0c1427] dark:text-white dark:border-[#172036]" />
-                <input type="number" [(ngModel)]="selectedMateriel.stock" name="stock" placeholder="Stock" required
-                    class="form-input border rounded-md p-2 w-full dark:bg-[#0c1427] dark:text-white dark:border-[#172036]" />
+                <div>
+                    <label for="nom-edit" class="block mb-1 font-medium">Nom</label>
+                    <input type="text" [(ngModel)]="selectedMateriel.nom" name="nom" id="nom-edit" placeholder="Nom" required
+                        class="form-input border rounded-md p-2 w-full dark:bg-[#0c1427] dark:text-white dark:border-[#172036]" />
+                </div>
+                <div>
+                    <label for="modele-edit" class="block mb-1 font-medium">Modèle</label>
+                    <input type="text" [(ngModel)]="selectedMateriel.modele" name="modele" id="modele-edit" placeholder="Modèle" required
+                        class="form-input border rounded-md p-2 w-full dark:bg-[#0c1427] dark:text-white dark:border-[#172036]" />
+                </div>
+                <div>
+                    <label for="stock-edit" class="block mb-1 font-medium">Stock</label>
+                    <input type="number" [(ngModel)]="selectedMateriel.stock" name="stock" id="stock-edit" placeholder="Stock" required
+                        class="form-input border rounded-md p-2 w-full dark:bg-[#0c1427] dark:text-white dark:border-[#172036]" />
+                </div>
             </div>
 
             <div class="flex justify-end space-x-2 pt-4">
