--- a/GMI-angular/src/app/dashboard/gestion-intervention/gestion-intervention.component.html
+++ b/GMI-angular/src/app/dashboard/gestion-intervention/gestion-intervention.component.html
@@ -142,7 +142,7 @@
                     </select>
                 </div>
                 <div>
-                    <label for="datederesolution" class="block mb-1 font-medium">Date de résolution</label>
+                    <label for="datederesolution" class="block mb-1 font-medium">Date d'envoi</label>
                     <input type="date" [(ngModel)]="newIntervention.datederesolution" name="datederesolution" id="datederesolution" required
                         class="form-input border rounded-md p-2 w-full dark:bg-[#0c1427] dark:text-white dark:border-[#172036]" />
                 </div>
@@ -203,7 +203,7 @@
                     </select>
                 </div>
                 <div>
-                    <label for="datederesolution-edit" class="block mb-1 font-medium">Date de résolution</label>
+                    <label for="datederesolution-edit" class="block mb-1 font-medium">Date d'envoi</label>
                     <input type="date" [(ngModel)]="selectedIntervention.datederesolution" name="datederesolution" id="datederesolution-edit" required
                         class="form-input border rounded-md p-2 w-full dark:bg-[#0c1427] dark:text-white dark:border-[#172036]" />
                 </div>
