--- a/GMI-angular/src/app/authentication/sign-in/sign-in.component.html
+++ b/GMI-angular/src/app/authentication/sign-in/sign-in.component.html
@@ -10,7 +10,7 @@
     <div class="mx-auto px-[12.5px] md:max-w-[720px] lg:max-w-[960px] xl:max-w-[1255px]">
         <div class="grid lg:grid-cols-2 gap-[25px] items-center">
             <div class="xl:ltr:-mr-[25px] xl:rtl:-ml-[25px] 2xl:ltr:-mr-[45px] 2xl:rtl:-ml-[45px] rounded-[25px] order-2 lg:order-1">
-                <img src="images/photo_kbira.jpeg" alt="sign-in-image" class="rounded-[25px] h-auto w-auto" >
+                <img src="images/logi.png" alt="sign-in-image" class="rounded-[25px] h-auto w-auto" >
                <!-- image el kbira  -->
             </div>
             <div class="xl:ltr:pl-[90px] xl:rtl:pr-[90px] 2xl:ltr:pl-[120px] 2xl:rtl:pr-[120px] order-1 lg:order-2">
